# ChatBot

./: Makefile  README.md  pyproject.toml  requirements.txt
data/: make_dataset.py
data/processed/: cleaned_dataframe.csv  data_info.json
data/raw/: chatbot_dataset.csv
docs/: README.md
model/: __init__.py
notebooks/: notebook_colab_chatbot.ipynb  train.ipynb
test/: test_dependencies.py
