[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["MT <msouza.os@hotmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
pymongo = "4.3.3"
autocorrect = "^2.6.1"


[tool.poetry.group.dev.dependencies]
matplotlib = "3.7.1"
pandas = "2.0.1"
ipykernel = "6.23.0"
nltk = "3.8.1"
pytest = "7.3.1"
scikit-learn = "1.2.2"
wordcloud = "1.9.1.1"

[tool.poetry.group.gui.dependencies]
PySide6 = { version = "6.5.0", python = ">=3.10, <3.12" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
